implemented FM with comparisons

--- a/3_mining_data_streams/mining_data_streams.ipynb
+++ b/3_mining_data_streams/mining_data_streams.ipynb
@@ -2,10 +2,11 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 159,
+   "execution_count": 239,
    "metadata": {},
    "outputs": [],
    "source": [
+    "import binascii\n",
     "import copy\n",
     "import networkx as nx\n",
     "import matplotlib.pyplot as plt\n",
@@ -86,7 +87,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 158,
+   "execution_count": 286,
    "metadata": {},
    "outputs": [
     {
@@ -94,10 +95,10 @@
      "output_type": "stream",
      "text": [
       "0b10000000000\n",
-      "[16, 16, 16, 16, 16, 16, 16, 16, 16, 16, 16, 16, 16, 16, 16, 16, 16, 16, 16, 16, 16, 16, 16, 16, 16, 16, 16, 16, 16, 16, 16, 16, 16, 16, 16, 16, 16, 16, 16, 16, 16, 16, 16, 16, 16, 16, 16, 16, 16, 16, 16, 16, 16, 16, 16, 16, 16, 16, 16, 16, 16, 16, 16, 16, 16, 16, 16, 16, 16, 16, 16, 16, 16, 16, 16, 16, 16, 16, 16, 16, 16, 16, 16, 16, 16, 16, 16, 16, 16, 16, 16, 16, 16, 16, 16, 16, 16, 16, 16, 16]\n",
+      "[9, 12, 9, 10, 8, 10, 8, 9, 9, 6, 10, 11, 10, 10, 10, 9, 14, 15, 10, 12, 10, 11, 14, 8, 9, 11, 14, 10, 13, 14, 13, 12, 14, 12, 9, 14, 11, 8, 9, 11, 8, 11, 11, 7, 13, 10, 13, 15, 9, 11, 10, 10, 8, 10, 10, 10, 10, 12, 9, 8, 10, 10, 15, 9, 8, 3, 10, 11, 7, 9, 9, 10, 10, 11, 6, 13, 10, 13, 10, 10, 12, 9, 11, 8, 14, 14, 15, 12, 13, 9, 11, 11, 8, 11, 12, 9, 10, 10, 9, 12]\n",
       "size of a split: 20\n",
-      "[16, 16, 16, 16, 16]\n",
-      "65536.0\n",
+      "[792.07424, 1584.14848, 792.07424, 792.07424, 1584.14848]\n",
+      "Expected 1024, obtained 1108.9039360000002\n",
       "0\n"
      ]
     }
@@ -163,11 +164,12 @@
     "            start = i*r_in_each_split\n",
     "            end = start + r_in_each_split\n",
     "            split_content = self.Rs[ start : min(len(self.Rs), end)]\n",
+    "            split_content_empirical = [2 ** x * 0.77351 for x in split_content]\n",
     "            split_medians.append(\n",
-    "                sorted(split_content)[len(split_content)//2]\n",
+    "                sorted(split_content_empirical)[len(split_content_empirical)//2]\n",
     "            )\n",
     "        print(split_medians)\n",
-    "        return 2 ** (sum(split_medians) / len(split_medians))\n",
+    "        return sum(split_medians) / len(split_medians)\n",
     "#         return 2 ** sorted(split_averages)[len(split_averages)//2]\n",
     "#         return 2 ** (sum(self.Rs)/len(self.Rs))\n",
     "        \n",
@@ -186,70 +188,201 @@
     "value = 2**10\n",
     "print(bin(value))\n",
     "counter = FMCounter(n_hashing_functions=100, n_splits=5, bit_string_length=16)\n",
-    "for i in range(1000000):\n",
+    "for i in range(value):\n",
     "    counter.add(i)\n",
     "print(counter.Rs)\n",
-    "print(counter.value())\n",
+    "print(\"Expected {}, obtained {}\".format(value, counter.value()))\n",
     "print(len([x for x in counter.Rs if x == 0]))\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 241,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[96430, 56298]\n",
-      "[77250, 58649]\n",
-      "131072\n"
+      "Total words: 83494\n"
      ]
     }
    ],
    "source": [
-    "print(counter.coefficients_a[:2])\n",
-    "print(counter.coefficients_b[:2])\n",
-    "print(counter.modulus)"
+    "with open(\"shakespear.txt\", 'r') as shakespear:\n",
+    "    words = set()\n",
+    "    for line in shakespear:\n",
+    "        for word in line.split(\" \"):\n",
+    "            words.add(word.lower())\n",
+    "    print(\"Total words: {}\".format(len(words)))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "'0b10001101110110111'"
-      ]
-     },
-     "execution_count": 65,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "bin((56298 * 123123123 + 58649) % 131072)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 287,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "4096\n"
+      "size of a split: 10\n",
+      "[202771.00544, 50692.75136, 101385.50272, 50692.75136, 50692.75136, 50692.75136, 202771.00544, 101385.50272, 101385.50272, 101385.50272]\n",
+      "Total words: 101385.50272\n"
      ]
     }
    ],
    "source": [
-    "print(2 ** 12 )#sorted([9.4, 9.4, 10.7, 11.9, 10.3, 10.6, 10.7, 11.9, 11.8, 11.6])[5]"
+    "with open(\"shakespear.txt\", 'r') as shakespear:\n",
+    "    words = FMCounter(n_hashing_functions=100, n_splits=10, bit_string_length=20)\n",
+    "    for line in shakespear:\n",
+    "        for word in line.split(\" \"):\n",
+    "            words.add(word.lower())\n",
+    "    print(\"Total words: {}\".format(words.value()))"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 244,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Total words: 84073\n"
+     ]
+    }
+   ],
+   "source": [
+    "import hyperloglog\n",
+    "with open(\"shakespear.txt\", 'r') as shakespear:\n",
+    "    words  = hyperloglog.HyperLogLog(0.01)\n",
+    "    for line in shakespear:\n",
+    "        for word in line.split(\" \"):\n",
+    "            words.add(word.lower())\n",
+    "    print(\"Total words: {}\".format(len(words)))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 249,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import random\n",
+    "import mmh3\n",
+    "\n",
+    "def median(lst):\n",
+    "    even = (0 if len(lst) % 2 else 1) + 1\n",
+    "    half = (len(lst) - 1) // 2\n",
+    "    return sum(sorted(lst)[half:half + even]) / float(even)\n",
+    "\n",
+    "class HashFunction:\n",
+    "    def __init__(self, seed):\n",
+    "        self.func = lambda x: (mmh3.hash(x, seed=seed) % 2**20) + 1\n",
+    "        self.max_tail_count = 0\n",
+    "\n",
+    "class HashGroup:\n",
+    "    def __init__(self, num_hashes_in_group = 10):\n",
+    "        self.hash_functions = []\n",
+    "        for i in range(num_hashes_in_group):\n",
+    "            self.hash_functions.append(HashFunction(random.randint(1,10000)))\n",
+    "\n",
+    "class FlajoletMartinCounter:\n",
+    "    def __init__(self, num_hash_groups = 10, num_hashes_in_group = 10):\n",
+    "        self.hash_groups = []\n",
+    "        for i in range(num_hash_groups):\n",
+    "            self.hash_groups.append(HashGroup(num_hashes_in_group))\n",
+    "    \n",
+    "    def trailing_zeroes(self, num):\n",
+    "        \"\"\"Counts the number of trailing 0 bits in num.\"\"\"\n",
+    "        if num == 0:\n",
+    "            return 32 # Assumes 32 bit integer inputs!\n",
+    "        p = 0\n",
+    "        while (num >> p) & 1 == 0:\n",
+    "            p += 1\n",
+    "        return p\n",
+    "    \n",
+    "    def process(self, element):\n",
+    "        for g in self.hash_groups:\n",
+    "            for f in g.hash_functions:\n",
+    "                h = f.func(element)\n",
+    "                \n",
+    "                tail_count = self.trailing_zeroes(h)\n",
+    "                \n",
+    "                if tail_count > f.max_tail_count:\n",
+    "                    f.max_tail_count = tail_count\n",
+    "    \n",
+    "    def give_estimate(self):\n",
+    "        estimate_pr_group = []\n",
+    "        for g in self.hash_groups:\n",
+    "            estimate_in_group = []\n",
+    "            for f in g.hash_functions:\n",
+    "                estimate_in_group.append(2 ** f.max_tail_count * 0.77351)\n",
+    "            estimate_pr_group.append(median(estimate_in_group))\n",
+    "        return 1.0*sum(estimate_pr_group) / len(estimate_pr_group)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 266,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Expected 1024, obtained 712.8668160000001\n"
+     ]
+    }
+   ],
+   "source": [
+    "counter = FlajoletMartinCounter(num_hash_groups = 10, num_hashes_in_group = 10)\n",
+    "for i in range(value):\n",
+    "    counter.process(str(i))\n",
+    "print(\"Expected {}, obtained {}\".format(value, counter.give_estimate()))\n",
+    "\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 268,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Total words: 64633.257984\n"
+     ]
+    }
+   ],
+   "source": [
+    "with open(\"shakespear.txt\", 'r') as shakespear:\n",
+    "    words  = FlajoletMartinCounter(num_hash_groups = 10, num_hashes_in_group = 10)\n",
+    "    for line in shakespear:\n",
+    "        for word in line.split(\" \"):\n",
+    "            words.process(word.lower())\n",
+    "    print(\"Total words: {}\".format(words.give_estimate()))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "markdown",
