extra questions done

--- a/3_mining_data_streams/mining_data_streams.ipynb
+++ b/3_mining_data_streams/mining_data_streams.ipynb
@@ -640,14 +640,37 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Optional\n",
+    "## Extra Points\n",
     "\n",
     "**1. What were the challenges you have faced when implementing the algorithm?**\n",
     "\n",
     "The main challenge was dealing correcly with the update of the counters. Meaning that the union must always be computed between the updated version of the current node counter and the old version of the neighbor counter. We need to keep a complete copy of the previous counters while updating the new ones, hence occupying twice the memory. The original algorith from Boldi and Vigna stores the temporary counters on disk and update them at the end of the full iteration.\n",
     "\n",
     "**2. Can the algorithm be easily parallelized? If yes, how? If not, why? Explain.**\n",
-    "\n"
+    "\n",
+    "The algorithm is keen to parallelization. To illustrate this statetement let's think of a vertex-centric pregel-like framework where we have a step composed by a messaging part first and a computation part second.\n",
+    "\n",
+    "In the messaging phase, the vertex will send his counter to each neighbour. If a probabilistic counter is used (i.e. FM or HyperLogLog counters) the amount of data exchanged is very low. In the computational part, the vertex will do the union of his counter with all the received counters.\n",
+    "In order for this approach to be successfull, the counters must support the union operation, as FM and HyperLogLog do.\n",
+    "Remember that the graph must be inverted first.\n",
+    "\n",
+    "**3. Does the algorithm work for unbounded graph streams? Explain.**\n",
+    "\n",
+    "No, it does not. As it is necessary for the algorithm to iterate once over all edges in order to propagate correctly the counters and construct the balls of size _t_. We proposed a slight variation of the algorithm which is able to cope with streaming edges, which enables the graph to be processed with sequential I/O. Nevertheless it is still necessary to do multiple passes over the graph and the algorithm must be notified that all the edges have been processed in order to update correctly the nodes. Remember that the measure of centrality depends on the count of element inside the ball of size $t$ and $t-1$, hence we must be sure that all the nodes are inside the ball, so all edges have been processed.\n",
+    "\n",
+    "On the other hand the algorithm can cope with sporadical addition of edges, in the sense that few edges can be added while the computation is still running. For example, let's assume that the computation has reached iteration $t=4$, if an edge is added, we would have to propagate the counter of the node pointed by the edge to all vertexes in the ball of size 4. This must be done before the iteration for $t=5$ starts. This may seems pheasible for this example, but if the diameter of the graph is low, or if $t$ is big enough (i.e. we have allready converged), the nodes inside the ball can be all the nodes in the graph and recomputation can be very expensive!\n",
+    "\n",
+    "Note that HyperBall was presented by the authors as an algorithm specifically designed to process large static graphs in memory. That is, storing the counters in memory, and processing the graph stored on disk with sequential I/0.\n",
+    "\n",
+    "**4. Does the algorithm support edge deletions? If not, what modification would it need? Explain.**\n",
+    "\n",
+    "No, for the same reasons explained in question 3. The algorithm needs to know that all the edges have been processed in order to compute the centrality measure. \n",
+    "\n",
+    "In contrast to edge addition, edge deletion is much trickier. Firt of all we need a counter that supports item subraction, both FM and HyperLogLog does not, because we lose the memory of the history of the coin-tosses and just save the number of adiacent zeros. We do not know which item was responsible for that sequence of zeros, even if we knew and the item we are subtracting was responsible for that last value, we should still remember the history of all previous values (for subsequent edge deletions).\n",
+    "\n",
+    "But let's assume that a counter that supports subtraction exists, for example by using the exact counter proposed at the beginning of the notebook which uses the complete sets. Let's also assume that the last complete computational step before the deletion was step $t$. Now, very naively, if the vertex $v$ is disconnected by the graph, we should remove all the vertexes contained in his counter to all counters contained in the ball of center $v$ and radius $t$ :  $\\mathscr{B}_{G}(v,t)$. But this approach is incorrect, because the items we are trying to subtract from neighbours counters, may have reached that particular counter following other possible paths. A simple solution for this would be a _\"reference counting approach\"_, where each vertex contained in the counter is associated to an incremental number which increases every time the vertex is received from a neighborg counter. In this way the vertex will be removed only if the counter reaches zero.\n",
+    "\n",
+    "Adapting the algorithm to edge deletion will cost a lot of memory, which will defy the goal of the original HyperBall algorithm.\n"
    ]
   },
   {
